kubernetes/apps/selfhosted/grafana/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - namespace: kube-system
      name: gateway
      sectionName: https
  hostnames:
    - grafana.apps.mrtb.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
